# CubeEngine_old

./: .gitattributes  .gitignore  CubeEngine.sln  README.md
Base/Base/: Base.vcxproj  Base.vcxproj.filters  BaseTypes.h  KeyCode.h  Vector.h
Core/EngineCore/: Assertion.h  EngineCore.cpp  EngineCore.h  EngineCore.vcxproj  EngineCore.vcxproj.filters  EngineCoreHeader.h  GameObject.cpp  GameObject.h  InputManager.cpp  LogWriter.cpp  LogWriter.h  ModuleManager.h  TimeManager.cpp  TimeManager.h
Core/EngineCore/Renderer/: CameraRenderer3D.cpp  CameraRenderer3D.h  Renderer3D.cpp  Renderer3D.h  RendererManager.cpp  RendererManager.h
Core/EngineCore/String/: ImmutableString.cpp  ImmutableString.h  PathString.cpp  PathString.h  StringManager.cpp  StringManager.h
Core/EngineCore/Thread/: Thread.cpp  Thread.h  ThreadManager.cpp  ThreadManager.h
Core/EngineCore/Time/: GameTime.h  TimeManager.cpp  TimeManager.h
Core/RenderAPI/BaseRenderAPI/: BaseRenderAPI.vcxproj  BaseRenderAPI.vcxproj.filters  BaseRenderUtility.h
Dependencies/Vulkan/: LICENSE.txt
Dependencies/glslang/: LICENSE.txt
Main/: Main.vcxproj  main.cpp
Modules/BaseModule/: BaseModule.vcxproj  BaseModule.vcxproj.filters
Modules/ExampleModule/: ExampleModule.cpp  ExampleModule.h  ExampleModule.vcxproj
Platform/BasePlatform/: BasePlatform.h  BasePlatform.vcxproj  BasePlatform.vcxproj.filters  BasePlatformDLib.h  BasePlatformLogWriter.h
Platform/WinPlatform/: WinDLib.cpp  WinLogWriter.cpp  WinPlatform.cpp  WinPlatform.h  WinPlatform.vcxproj  WinPlatform.vcxproj.filters  WinPlatformHeader.h
SampleResources/Models/: geosphere.obj.cmeta
SampleResources/Shaders/: Fragment-Textured.glsl  Fragment.glsl  Fragment.glsl.cmeta  Skybox.fs  Skybox.fs.cmeta  Skybox.vs  Vertex.glsl  Vertex.glsl.cmeta
SampleResources/Textures/: TestTexture2.png.cmeta
Source/Main/: Main.vcxproj  main.cpp
Source/Platform/: DLib.h  FileSystem.h  Platform.h  Platform.vcxproj  Platform.vcxproj.filters  PlatformAssertion.cpp  PlatformAssertion.h  PlatformDebugUtility.h  PlatformHeader.h  PlatformString.h
Source/Test/: Test.vcxproj  main.cpp
v1/: .gitattributes  CubeEngine.sln  LICENSE
v2/: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CubeEngine TODO.txt  LICENSE  README.md  buffer.txt
v2/Dependencies/glslang/lib/Win64/: OGLCompilerd.lib  OSDependentd.lib  ReleaseVersion.txt
v2/Source/Core/: Assertion.h  CMakeLists.txt  Core.cpp  Core.h  CoreFwd.h  CoreHeader.h  GameThread.cpp  GameThread.h  Handler.h  LogWriter.cpp  LogWriter.h
v2/Source/Core/Allocator/: AllocatorUtility.h  FrameAllocator.cpp  FrameAllocator.h
v2/Source/Core/Module/: Module.cpp  Module.h  ModuleManager.cpp  ModuleManager.h
v2/Source/Core/Renderer/: BaseMeshGenerator.cpp  BaseMeshGenerator.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  RenderObject.cpp  RenderObject.h  RenderableComponent.cpp  RenderableComponent.h  RendererManager.cpp  RendererManager.h  RenderingThread.cpp  RenderingThread.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
v2/Source/Core/Resource/: Resource.cpp  Resource.h  ResourceImporter.h  ResourceManager.cpp  ResourceManager.h
v2/Source/Core/Thread/: Async.h  MutexLock.h  TaskQueue.h
v2/Source/Core/Time/: GameTime.cpp  GameTime.h  TimeManager.cpp  TimeManager.h
v2/Source/Core/World/: World.cpp  World.h  WorldObject.cpp  WorldObject.h
v2/Source/Engine/: CMakeLists.txt  Engine.cpp  Engine.h  EngineFwd.h  EngineHeader.h
v2/Source/Main/: CMakeLists.txt  main.cpp
v2/Source/Modules/InputModule/: CMakeLists.txt  InputModule.cpp  InputModule.h  InputModuleFwd.h  InputModuleHeader.h  KeyboardMouseInput.cpp  KeyboardMouseInput.h  XboxControllerInput.cpp  XboxControllerInput.h
v2/Source/Platform/: CMakeLists.txt  DLib.h  FileSystem.h  Platform.h  PlatformDebug.h  PlatformHeader.h  PlatformString.h
v2/Source/Platform/Win32/: Win32DLib.cpp  Win32DLib.h  Win32Debug.cpp  Win32Debug.h  Win32FileSystem.cpp  Win32FileSystem.h  Win32Platform.cpp  Win32Platform.h  Win32String.cpp
v2/Source/RenderAPIs/: CMakeLists.txt
v2/Source/RenderAPIs/RenderAPI/: CMakeLists.txt  RenderAPI.h  RenderAPIFwd.h  RenderAPIHeader.h
v2/Source/RenderAPIs/RenderAPI/Interface/: BlendState.h  Buffer.h  CommandList.h  DepthStencilState.h  Fence.h  Framebuffer.h  InputLayout.h  PipelineState.h  RasterizerState.h  RenderPass.h  RenderTypes.h  Resource.h  Sampler.h  Shader.h  ShaderVariables.h  SwapChain.h  Texture.h  TextureView.h
v2/Source/RenderAPIs/RenderAPI/Utilities/: VariableSizeMemoryPage.h
v2/Source/RenderAPIs/VulkanAPI/: CMakeLists.txt  VulkanAPI.cpp  VulkanAPI.h  VulkanAPIFwd.h  VulkanAPIHeader.h  VulkanCommandPoolManager.cpp  VulkanCommandPoolManager.h  VulkanDebug.cpp  VulkanDebug.h  VulkanDevice.cpp  VulkanDevice.h  VulkanFencePool.cpp  VulkanFencePool.h  VulkanLayout.cpp  VulkanLayout.h  VulkanMemoryAllocator.cpp  VulkanMemoryAllocator.h  VulkanQueueManager.cpp  VulkanQueueManager.h  VulkanSemaphorePool.cpp  VulkanSemaphorePool.h  VulkanShader.cpp  VulkanShader.h  VulkanShaderVariableManager.cpp  VulkanShaderVariableManager.h  VulkanStagingManager.cpp  VulkanStagingManager.h  VulkanTypeConversion.cpp  VulkanTypeConversion.h  VulkanUtility.cpp  VulkanUtility.h
v2/Source/RenderAPIs/VulkanAPI/Interface/: BufferVk.cpp  BufferVk.h  CommandListVk.cpp  CommandListVk.h  FenceVk.cpp  FenceVk.h  FramebufferVk.cpp  FramebufferVk.h  PipelineStateVk.cpp  PipelineStateVk.h  RenderPassVk.cpp  RenderPassVk.h  SamplerVk.cpp  SamplerVk.h  ShaderVariablesVk.cpp  ShaderVariablesVk.h  ShaderVk.cpp  ShaderVk.h  SwapChainVk.cpp  SwapChainVk.h  TextureViewVk.cpp  TextureViewVk.h  TextureVk.cpp  TextureVk.h
v2/Source/RenderAPIs/VulkanAPI/Tools/: GLSLTool.cpp  GLSLTool.h
v2/Source/Utility/: CMakeLists.txt  CubeFormat.cpp  Event.h  Flags.h  Format.h  Json.h  KeyCode.h  Math.cpp  Math.h  Matrix.h  MatrixUtility.h  String.cpp  String.h  Types.h  Vector.h
v2/Source/Utility/MatrixImpl/: MatrixArray.h  MatrixSSE.h  MatrixUtilityArray.h  MatrixUtilitySSE.h
v2/Source/Utility/VectorImpl/: VectorArray.h  VectorSSE.h
v2/Source/Utility/fmt/: core.h
(+629 files in other folders)
